--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               </article>
               <article>
                 <img
-                  src="https://education.oracle.com/file/general/p-80-java.png"
+                  src="https://pluralsight2.imgix.net/paths/images/nodejs-45adbe594d.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -167,7 +167,7 @@
               </article>
               <article>
                 <img
-                  src="https://w7.pngwing.com/pngs/447/294/png-transparent-python-javascript-logo-clojure-python-logo-blue-angle-text-thumbnail.png"
+                  src="https://miro.medium.com/v2/resize:fit:1200/1*WA_9JsyqFkge2HwYKcdJQw.png"
                   alt="Experience icon"
                   class="icon"
                 />
